<resources>
    <string name="app_name">My ToDo List</string>
    <string name="enter_text">Enter text:</string>
    <string name="enter_your_todo">Enter your todo</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="cross_out">Cross out?</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_your_note">Edit your note:</string>
</resources>